
                CHANGES IN party VERSION 1.0-12 (2014-01-15)

    o    mammoexp -> TH.data


                CHANGES IN party VERSION 1.0-11 (2013-12-13)

    o    deal with empty levels for teststat = "quad"
         (bug reported by Wei-Yin Loh <loh@stat.wisc.edu>)


                CHANGES IN party VERSION 1.0-10 (2013-10-24)

    o    new demo "strucchange-perm"

    o    proximity has newdata argument


                CHANGES IN party VERSION 1.0-9 (2013-09-02)

    o    export initVariableFrame (for usage in RWeka only)

    o    fix NAMESPACE problems

    o    data is in TH.data, not ipred anymore


                CHANGES IN party VERSION 1.0-8 (2013-07-11)

    o    update mvtdist

    o    documentation update


                CHANGES IN party VERSION 1.0-7 (2013-05-31)

    o    ctree and cforest ignored the scores argument for the
         response. Spotted and fixed by Silke Janitza 
         <janitza@ibe.med.uni-muenchen.de>.


                CHANGES IN party VERSION 1.0-6 (2013-01-09)

    o    use hist()$density instead of hist()$Intensities as 
         reported by R 3.0.0 to be


                CHANGES IN party VERSION 1.0-5 (2013-01-07)

    o    fix class problem reported by R 3.0.0 to be


                CHANGES IN party VERSION 1.0-4 (2012-12-18)

    o    export varimpAUC()

    o    add where() method for RandomForest class


                CHANGES IN party VERSION 1.0-3 (2012-09-26)

    o    new function varimpAUC() for AUC-based variable importance measures

    o    the `weights' argument in cforest() can now be used to define
         alternative case weights for each of the trees in the forest.


                CHANGES IN party VERSION 1.0-2 (2012-04-26)

    o    version 1.0-0 introduced a new bug in plotting Kaplan-Meier curves
         when fixing the weight problem in survfit; the x-axis labels where
         incorrect. Spotted by Sarah Vowler <Sarah.Vowler@cancer.org.uk>.

