@@ -17,7 +17,8 @@ setMethod(f = "initialize", signature = "ExpectCovarInfluence",
         .Object@expectation <- rep(0, q)
         .Object@covariance <- matrix(0, nrow = q, ncol = q)
         .Object@dimension  <- as.integer(q)
-        .Object@sumweights <- as.double(0.0)
+        .Object@sumweights <- log(1) ### was as.double(0.0) but 
+                                     ### there seem to be protection issues
         .Object
     }
 )
