@@ -1,4 +1,9 @@
 
+                CHANGES IN party VERSION 1.0-13 (2014-02-01)
+
+    o    deal with protection issues in R-devel
+
+
                 CHANGES IN party VERSION 1.0-12 (2014-01-15)
 
     o    mammoexp -> TH.data
